tests/baselines/reference/unusedTypeParameters3.errors.txt
unusedTypeParameters3.ts(1,15): error TS6133: 'typeparameter1' is declared but its value is never read.
unusedTypeParameters3.ts(1,47): error TS6133: 'typeparameter3' is declared but its value is never read.
unusedTypeParameters3.ts(2,13): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.


==== unusedTypeParameters3.ts (3 errors) ====
    class greeter<typeparameter1, typeparameter2, typeparameter3> {
                  ~~~~~~~~~~~~~~
!!! error TS6133: 'typeparameter1' is declared but its value is never read.
                                                  ~~~~~~~~~~~~~~
!!! error TS6133: 'typeparameter3' is declared but its value is never read.
        private x: typeparameter2;
                ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
    
        public function1() {
            this.x;
        }
    }